--- a/.prettierrc
+++ b/.prettierrc
@@ -4,7 +4,6 @@
   "bracketSameLine": false,
   "bracketSpacing": true,
   "embeddedLanguageFormatting": "auto",
-  "htmlWhitespaceSensitivity": "css",
   "insertPragma": false,
   "jsxSingleQuote": false,
   "printWidth": 120,
@@ -14,6 +13,5 @@
   "semi": false,
   "singleQuote": true,
   "tabWidth": 2,
-  "useTabs": false,
-  "vueIndentScriptAndStyle": false
+  "useTabs": false
 }
